@@ -1,5 +1,9 @@
 2007-09-11  Simon Goodall  <simon@worldforge.org>
 
+	* libwfut/WFUT.h: Call shutdown in the destructor if required.
+
+2007-09-11  Simon Goodall  <simon@worldforge.org>
+
 	* configure.ac, libwfut/IO.cpp: Add a configure check to make sure
 	  that curl is recent enough to support CURLMOPT_PIPELINING.
 
